--- a/WIRVINGJIMENEZEFP6232/appsettings.json
+++ b/WIRVINGJIMENEZEFP6232/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ExamenProgra6ApiKey": "WirExamenProgra6AsdZxc12345",
   "ConnectionStrings": {
     "CNNSTR": "SERVER=.; DATABASE=AnswersDB; INTEGRATED SECURITY=FALSE; USER ID=MyWirvingJimenezEFP6232; PASSWORD="
   }
